# new-aglae-data-converter

./: .gitignore  20230227_0002_Std_SASHI_IBA.hdf5  20230510_0001_Std_COLORSOURCES_IBA.hdf5  Cargo.toml  Makefile  README.md  SCHEMA.md  cli.py  config.yml  converter.py  gui.py  lst_config.yml  lstrs.pyi  parsers.py  pyproject.toml  requirements.txt
.github/workflows/: build-package.yml  pr-workflow.yml  release-package.yml  test-converter.yml
PyMca5/: __init__.py
PyMca5/PyMcaIO/edf/: setup.py
globals/: converter.py
lst/: converter.py  lstconfig.py  parser.py
new_aglae_data_converter/: config.py  converter.py  edf.py  gui.py  main.py
new_aglae_data_converter/globals/: converter.py  parsers.py
new_aglae_data_converter/lst/: converter.py  lstconfig.py
python/: _lstrs.pyi  enums.py
python/lst/: converter.py  models.py  parser.py
src/: lib.rs
src/converter/: config.rs  events.rs  helpers.rs  mod.rs  models.rs
test_assets/data/20230510_0002_Std_COLORSOURCES_IBA/: 20230510_0001_Std_COLORSOURCES_IBA.x0  20230510_0001_Std_COLORSOURCES_IBA.x13  20230510_0002_Std_COLORSOURCES_IBA.g20  20230510_0002_Std_COLORSOURCES_IBA.x1  20230510_0002_Std_COLORSOURCES_IBA.x12  20230510_0002_Std_COLORSOURCES_IBA.x13  20230510_0002_Std_COLORSOURCES_IBA.x3  20230510_0003_Std_COLORSOURCES_IBA.g20  20230510_0003_Std_COLORSOURCES_IBA.g70  20230510_0003_Std_COLORSOURCES_IBA.r135  20230510_0003_Std_COLORSOURCES_IBA.r150  20230510_0003_Std_COLORSOURCES_IBA.x0  20230510_0003_Std_COLORSOURCES_IBA.x12  20230510_0003_Std_COLORSOURCES_IBA.x3
test_assets/data/20230510_0002_arc_COLORSOURCES_IBA/: 20230510_0001_arc_COLORSOURCES_IBA.g20  20230510_0001_arc_COLORSOURCES_IBA.g27  20230510_0001_arc_COLORSOURCES_IBA.g70  20230510_0001_arc_COLORSOURCES_IBA.r135  20230510_0001_arc_COLORSOURCES_IBA.r150  20230510_0001_arc_COLORSOURCES_IBA.x1  20230510_0001_arc_COLORSOURCES_IBA.x10  20230510_0001_arc_COLORSOURCES_IBA.x12  20230510_0001_arc_COLORSOURCES_IBA.x2  20230510_0001_arc_COLORSOURCES_IBA.x3  20230510_0001_arc_COLORSOURCES_IBA.x4  20230510_0002_arc_COLORSOURCES_IBA.g27  20230510_0002_arc_COLORSOURCES_IBA.g70  20230510_0002_arc_COLORSOURCES_IBA.r135  20230510_0002_arc_COLORSOURCES_IBA.r150  20230510_0002_arc_COLORSOURCES_IBA.x0  20230510_0002_arc_COLORSOURCES_IBA.x10  20230510_0002_arc_COLORSOURCES_IBA.x2  20230510_0002_arc_COLORSOURCES_IBA.x4  20230510_0003_arc_COLORSOURCES_IBA.g27  20230510_0003_arc_COLORSOURCES_IBA.x10  20230510_0003_arc_COLORSOURCES_IBA.x11  20230510_0003_arc_COLORSOURCES_IBA.x13  20230510_0003_arc_COLORSOURCES_IBA.x2  20230510_0003_arc_COLORSOURCES_IBA.x4
(+130 files in other folders)
