[package]
name = "lstrs"
version = "0.1.0"
edition = "2021"
authors = ["Maxime Cattet <maximecattet@gmx.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lstrs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
env_logger = "0.10"
ndarray = "0.15"
hdf5 = "0.8"
pyo3 = { version = "0.18.0", features = ["abi3-py39", "extension-module"] }
pyo3-log = "0.8.1"

[build-dependencies]
pyo3-build-config = "0.18.0"