[tool.poetry]
name = "new-aglae-data-converter"
version = "0.1.0"
description = "Toolbox to convert data from files from New AGLAE particle accelerator to HDF5 format."
authors = ["Witold Wroblewski <dev@witold.fr>", "Maxime Cattet <maximecattet@gmx.com>"]
readme = "README.md"
packages = [{ include = "lst" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
h5py = "3.7.0"
numpy = "1.24.1"
PySide6 = "6.4.2"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
py-spy = "^0.3.14"
nuitka = "^1.3.8"
maturin = "^0.14.15"

[build-system]
requires = ["poetry-core", "maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
